--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <img src="images/katanaphoto.jpg" width="288" height="386" alt="Photo of Katana Haley" />
 </p>  
  
-	<h2 class="center">Software Engineer/ Web Developer</h2>
+	<h2 class="center">Software Engineer | Web Developer</h2>
 
 
 
