--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,30 @@
 		</div>
     </main>
 
+	  
+	  <form
+  action="https://formspree.io/f/mwkwqkjg"
+  method="POST"
+>
+   <label>
+    Your name:
+    <textarea name="Your name"></textarea>
+  </label>
+
+  
+  <label>
+    Your email:
+    <input type="text" name="_replyto">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+
+  <!-- your other form fields go here -->
+
+  <button type="submit">Send</button>
+</form>
 <hr>
 
 <!-- ----Footer---- -->
