Place home page content within a flexbox

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
   <main class="light-background">
 		<div class="wrapper">
       <article>
+        <div class="group">
         <section>
-		
-       
 
 <p class="aligncenter">
     <img src="images/katanaphoto.jpg" width="288" height="386" alt="Photo of Katana Haley" />
@@ -37,11 +36,8 @@
  
 	<h2 class="center">Software Engineer | Web Developer</h2>
 
-
-
   <h3>Intro</h3>
   <p class="align-left">I specialize in creating websites, applications, and technology products that meet your goals and move your business forward. I call Dallas, TX my home.</p>
-
 
   <h3 class="align-left">Interests</h3>
   <ol>
@@ -51,14 +47,12 @@
     <li>Reading about quantum physics</li>
     <li>Solving math challenges</li>
     </ol>
-
  </section>
         </article>
         </div>
 	</main>
    
     <hr>
-
 
 <!-- ----Footer---- -->
 <footer class="footer">
