Added flexbox as the main section

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 
   <main class="light-background">
 		<div class="wrapper">
+<div class="group">
+
       <article>
-        <div class="group">
         <section>
 
 <p class="aligncenter">
@@ -50,6 +51,7 @@
  </section>
         </article>
         </div>
+	  </div>
 	</main>
    
     <hr>
