Added Services to About Me

--- a/about.html
+++ b/about.html
@@ -35,7 +35,10 @@
   <p class="align-left">As a software engineer and developer, I specialize in creating products for the web. Specifically, I create bespoke websites and applications. All of my projects are built from the ground up.</p>
 
   <p>I've developed websites for years and I'm thrilled about expanding my knowledge by learning new programming languages and technologies. I enjoy collaborating on a team to develop a project everyone's best and brightest thoughts and skills.
-        </section>
+  
+	<h2 class="center">Technology services</h2>
+		<p>My services include; full stack web development, application prototypes & builds, copywriting deliverables such as whitepapers, articles, and email campaigns.      
+	      </section>
       </article>
 		</div>
     </main>
