Added links to live applications

--- a/about.html
+++ b/about.html
@@ -36,14 +36,20 @@
 
   <p>I've developed websites for years and I'm thrilled about expanding my knowledge by learning new programming languages and technologies. I enjoy collaborating on a team to develop a project everyone's best and brightest thoughts and skills.
   
-	<h2 class="center">Technology services</h2>
+	<h3 class="center">Technology services</h3>
 		<p>My services include; full stack web development, application prototypes & builds, copywriting deliverables such as whitepapers, articles, and email campaigns.      
+	     
+		<h4> class="center">Projects</h4>
+		<ul>
+    <li>Library Project - A simulation library to view the current status of books in stock</li>
+    <li><a href="https://katanahaley.github.io/DecoderOfTheRings/">Decoder Ring Project - Three operating decoder ciphers; Caesar, Polybius, and Substitution</li></a>
+    <li><a href="https://katanahaley.github.io/PizzaSite/">Pizza Site - A single page site about pizza</li>
+    <li>Coffee Site - A single page site about coffee</li>
+		</ul>	
 	      </section>
       </article>
 		</div>
     </main>
-
-
 <hr>
 
 <!-- ----Footer---- -->
