--- a/about.html
+++ b/about.html
@@ -39,13 +39,25 @@
 	<h3 class="center">Technology services</h3>
 		<p>My services include; full stack web development, application prototypes & builds, copywriting deliverables such as whitepapers, articles, and email campaigns.      
 	     
-		<h4> class="center">Projects</h4>
+	<h4> class="center">Projects</h4>
 		<ul>
     <li>Library Project - A simulation library to view the current status of books in stock</li>
     <li><a href="https://katanahaley.github.io/DecoderOfTheRings/">Decoder Ring Project - Three operating decoder ciphers; Caesar, Polybius, and Substitution</li></a>
     <li><a href="https://katanahaley.github.io/PizzaSite/">Pizza Site - A single page site about pizza</li>
     <li>Coffee Site - A single page site about coffee</li>
 		</ul>	
+	      
+	  <h5> class="center">Skills</h5>
+	      <ul>
+	     <li>Javascript</li>
+	     <li>HTML</li>		      
+	     <li>CSS</li>
+	     <li>React</li>
+             <li>Responsive design</li>
+             <li>Testing and debugging</li>
+	     <li>Copywriting and search engine optimization</li>
+             <li>Email marketing</li> 
+	      </ul>
 	      </section>
       </article>
 		</div>
